# gigsgo-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ruff.yaml  test.yaml
data/: data.json
src/: app.py  main.py
src/utils/: extract.py  maps.py  pipeline.py  transform.py
tests/: test_app.py  test_extract.py  test_main.py  test_pipeline.py  test_transform.py
tests/assets/: ex01.py  ex02.py  ex03.py  ex04.py
