[project]
name = "gigshk-pipeline"
dynamic = ["version"]
description = "An ETL pipeline for gig data"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = [
    "beautifulsoup4==4.12.3",
    "masquer==1.2.0",
    "requests==2.32.3",
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["API", "ETL", "web-scraping"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.7.1",
    "ruff>=0.4.10",
]

[project.urls]
documentation = "https://github.com/essteer/gigshk-pipeline/blob/main/README.md"
repository = "https://github.com/essteer/gigshk-pipeline"
issues = "https://github.com/essteer/gigshk-pipeline/issues"
